# aztec-reducer

./: README.md  pyproject.toml
py/sonata_reducer/: __init__.py  bok.py  telescope.py
py/sonatapy/: __init__.py  bok.py  exceptions.py  telescope.py
py/sonatapy/pipelines/: bok_reducer.py
py/sonatapy/standards/: calspec_names.csv
test/: bok_reducing.ipynb  bok_test.py  check_outputs.ipynb
